[project]
name = "telegram-poster-bot"
version = "0.1.0"
description = "Single-operator Telegram bot for scheduling, multi-channel posting, and editing channel posts"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.3",
    "telethon>=1.36",
    # Patches ssl to trust the Windows certificate store - without this, requests to
    # api.telegram.org fail with SSLCertVerificationError on machines with a
    # corporate/antivirus TLS-inspecting proxy whose root CA isn't in the public certifi bundle.
    "pip-system-certs>=4.0; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handlers", "services"]
